/api/employee endpoint now support multipart/form-data contentType
